--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,7 @@
           <li><a href="/directors">Directors</a></li>
           <li><a href="/movies">Movies</a></li>
           <li><a href="/actors">Actors</a></li>
+          <li><a href="/characters">Roles</a></li>
           <li><a href="/rails/info">Sitemap</a></li>
 
         </ul>
